--- a/assets/css/homenet-contact.css
+++ b/assets/css/homenet-contact.css
@@ -158,12 +158,12 @@ section {
 
 .contacts-grid .grid-item .content h3 {
     text-align: center;
-    font-weight: 600;
+    font-weight: 700;
     line-height: 1;
     margin-bottom: 15px;
-    font-size: 35px;
+    font-size: 34.5px;
     font-family: var(--font-secondary);
-    color: var(--black-section);
+    color: #394649;
 }
 
 .contacts-grid .grid-item .content .contact {
