--- a/assets/css/homenet-buttons.css
+++ b/assets/css/homenet-buttons.css
@@ -8,10 +8,15 @@ button:not(:disabled),
     cursor: pointer;
 }
 
-/* Remove Focus Borders */
+/* Remove Focus Borders and color*/
 button:focus,
 input:focus {
     outline: none;
+}
+
+a.homenet-btn:focus {
+    color: inherit;
+    text-decoration: none;
 }
 
 .bs4 a {
@@ -107,7 +112,7 @@ a.button-round:focus {
 .button-default-white i,
 .button-default-white-2 i,
 .button-round i {
-    margin-right: 10px;
+    margin-left: 10px;
 }
 
 
@@ -168,12 +173,13 @@ a.button-default-color:hover {
 
 .button-default-white {
     border: 1px solid var(--default-border);
-    color: rgba(0, 0, 0, 0.7);
+    color: #333;
     background-color: #fff;
 }
 
 a.button-default-white:hover {
-    color: #000;
+    color: #fff;
+    background-color: #7eb7a4;
 }
 
 .button-default-white-2 {
